<resources>
    <string name="app_name">Paw Petstore</string>
    <string name="app">Paw Petstore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="subscribe_to_news">Subscribe to news</string>
    <string name="log_token">Log token</string>
    <string name="default_notification_channel_name">News</string>
    <string name="msg_subscribed">Subscribed to product topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="NoInternet">Please check your internet connection</string>
    <string name="Error500">Error: Something Went Wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="ket_checkout">Pembayaran wajib dilakukan dalam 1x24 Jam via : BCA 223334444 a.n Keke</string>
    <string name="ket_checkout2">Pembayaran wajib dilakukan dalam jangka waktu 2 jam setelah booking via : BCA 223334444 a.n Keke</string>
    <string name="ket_tambahan">Status Order bisa ditemukan di menu History</string>
    <string name="ket_tambahan2">Status Booking bisa ditemukan di menu History</string>
    <string name="ket_tambahan3">PERHATIAN!</string>
    <string name="ket_tambahan4">1. Akan dikenakan denda sebesar 100% per hari apabila pengembalian hewan peliharaan tidak sesuai tanggal pengembalian.</string>
    <string name="ket_tambahan5">2. Akan dikenakan denda sebesar 25% per jam apabila posisi rumah tidak ada penghuni atau pemilik hewan tidak dapat dihubungi ketika staf kami mengandar hewan peliharaan.</string>
    <string name="ket_tambahan6">Silahkan lanjutkan pembayaran ke menu Transfer Confirmation</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="key">key_id</string>
    <string-array name="jenis">
        <item>Pilih Hewan</item>
        <item>Kucing</item>
        <item>Kelinci</item>
        <item>Anjing</item>
    </string-array>
    <string-array name="jenis_hewan">
        <item>Pilih Jenis Hewan</item>
        <item>Bulu Pendek</item>
        <item>Bulu Panjang</item>
    </string-array>
    <string-array name="ukuran">
        <item>Pilih Ukuran Hewan</item>
        <item>Kecil</item>
        <item>Sedang</item>
        <item>Besar</item>
    </string-array>

    <string name="msg_connection_issue">Cannot connect to Internet...Please check your connection!</string>
    <string name="msg_server_issue">The server could not be found. Please try again after some time!!</string>
    <string name="msg_auth_issue">Cannot connect to Internet...Please check your connection</string>
    <string name="msg_parsing_issue">Parsing error! Please try again after some time!!</string>
    <string name="msg_noinet_issue">Cannot connect to Internet...Please check your connection!</string>
    <string name="msg_timeout_issue">Connection TimeOut! Please check your internet connection.</string>
    <string name="msg_default_issue">Something went wrong, please try again</string>
    <string name="api_error">Something bad happened, please try later</string>
    <string name="api_unauthorized">You don\'t have permission to access this app</string>
    <string name="app_exit">Press again to exit</string>
</resources>
