<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.AppCompat"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/ll_total"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/ket_checkout2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                android:text="@string/ket_tambahan2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                android:text="@string/ket_tambahan3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                android:text="@string/ket_tambahan4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                android:text="@string/ket_tambahan5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/ket_tambahan6"/>
        </LinearLayout>
    </RelativeLayout>
    <TableLayout
        android:id="@+id/bottomLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:stretchColumns="1">

        <TableRow android:background="@color/white">
            <Button
                android:id="@+id/btnSelesai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/halfMargin"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="@dimen/halfMargin"
                android:layout_marginTop="@dimen/halfMargin"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_blue"
                android:text="Done"
                android:textColor="@color/white"
                android:textSize="@dimen/product_detail_button" />
        </TableRow>
    </TableLayout>

</RelativeLayout>